<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/cardMargin"
    android:background="#90000000"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/largeTextSize"
        android:fontFamily="@font/setpoppins"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/tap_on_an_empty_card_to_add_new_dependant"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/sample_empty_dependant_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/largeTextSize"
        android:fontFamily="@font/setpoppins"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/swipe_left_on_a_filled_card_to_delete_the_dependant"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/sample_filled_card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCloseOverlay"
        style="@style/Enroll_Button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/cardTopMargin"
        android:text="@string/got_it"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</LinearLayout>